--- a/templates/post.template
+++ b/templates/post.template
@@ -10,9 +10,11 @@
 		<link rel="shortcut icon" type="image/png" href="../favicon.png">
 	</head>
 	<body>
-		<article>
+		<main>
+			<article>
 <h1>{{ index .Properties "title" }}</h1>
 {{ renderMarkdown .Content}}
-		</article>
+			</article>
+		</main>
 	</body>
 </html>
