--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,8 @@ jobs:
 
       - name: Build
         run: |
-          GOOS=linux GOARCH=arm64 make build
+          make build
+          GOOS=linux GOARCH=arm64 makeserver output -o server
 
       - name: Add private SSH key
         env:
